--- a/PBL Batch Mode - Visualisation for 3 Strata (LE).Rmd
+++ b/PBL Batch Mode - Visualisation for 3 Strata (LE).Rmd
@@ -35,7 +35,10 @@ LE_df$EDUDR04 <- as.factor(LE_df$EDUDR04)
 LE_clean <- LE_df %>%
   select(SMKDSTY, DHH_SEX, EDUDR04, ByRowLifeExpectancy)
 
-
+#Renamed the levels in factor variables EDUDR04 and SMKDSTY
+levels(LE_clean$EDUDR04) <- c("Post Secondary", "Some Post Secondary", "High School", "Less then High School", "Missing")
+levels(LE_clean$SMKDSTY) <- c("Daily", "Former daily current occasional", "Never daily current occasional", "Former daily current nonsmoker", "Never daily current smoker (former occasional)", "Never Smoker", "Missing")
+LE_clean
 
 ###STEP 2: Manipulate the data: stratify, calculate the mean, and split:
 LE_3 <- LE_clean %>%  
@@ -67,10 +70,19 @@ p3F <- LE_3_F %>%
 p3F
 
 
-#Combined Male plot and Female plot
+#Combined Male plot and Female plot and adjust the axis titles
 p3 <- subplot(p3M, p3F, nrows = 1) %>%
-  layout(xaxis = list(title = 'Smoke Status in Males'), 
+  layout(xaxis = list(title = 'Smoke Status in Males', 
+                      tickfont=list(family = "Old Standard II, serif", 
+                                    size = 10, 
+                                    color = "black"), 
+                      tickangle=45), 
          yaxis = list(title= 'Life Expectancy (Years)'),
-         xaxis2 = list(title = 'Smoke Status in Females'))
+         xaxis2 = list(title = 'Smoke Status in Females', 
+                       tickfont=list(family = "Old Standard II, serif",
+                                     size = 10,
+                                     color = "black"), 
+                       tickangle=45),
+          yaxis = list(title= 'Life Expectancy (Years)'))
 p3
 ```
